# books2

./: .gitignore  README.md  pyproject.toml
books2/: license.txt  main.py
books2/helpers/: get_soup.py  logger.py  loggering.py
